--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,18 @@
 
 @import "blocks/btn";
 @import "blocks/modal";
+@import "blocks/header";
+@import "blocks/navigation";
+@import "blocks/advantages";
+@import "blocks/main";
+@import "blocks/footer";
+@import "blocks/info";
+@import "blocks/promo";
+@import "blocks/catalog";
+@import "blocks/card";
+@import "blocks/booking";
+@import "blocks/form";
+@import "blocks/checkbox";
 
 // ---------------------------------
 
