--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -6,7 +6,7 @@
 
 html,
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   min-height: 100vh;
 }
@@ -30,8 +30,16 @@ html {
 body {
   width: 100%;
   height: 100%;
-
-  background-color: #d6e3f2;
+  background-color: $color-alice-blue;
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  color: $color-tangaroa;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 a {
