--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,9 @@
 @import "blocks/booking";
 @import "blocks/form";
 @import "blocks/checkbox";
+@import "blocks/address";
+@import "blocks/social";
+@import "blocks/logo";
 
 // ---------------------------------
 
