--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -1,8 +1,20 @@
 .address {
+  @include vp-767 {
+    padding: 65px 15px;
+  }
+
+  @include vp-1023 {
+    padding: 100px 45px;
+  }
+
   padding: 120px 103px;
 }
 
 .address__wrapper {
+  @include vp-767 {
+    flex-direction: column;
+  }
+
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,9 +22,16 @@
 }
 
 .address__map {
-  background-image: url("../img/map.jpg");
-  flex: 0 0 560px;
+  @include vp-767 {
+    order: 2;
+  }
+
+  order: 0;
+  background-image: url("../img/map.webp");
+  width: 100%;
   height: 306px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .address__description {
