--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -1,4 +1,8 @@
 .booking {
+  @include vp-1023 {
+    flex-direction: column;
+  }
+
   background-image: url("../img/backgroundForm.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -6,21 +10,47 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .booking__title {
+  @include vp-767 {
+    font-size: 24px;
+    line-height: 1.3;
+  }
+
+  @include vp-1023 {
+    font-size: 34px;
+    line-height: 1.5;
+    text-align: center;
+  }
+
   font-weight: 700;
   font-size: 40px;
   line-height: 1.5;
   margin: 0;
+  text-align: left;
 }
 
 .booking__description {
+  @include vp-767 {
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
+  @include vp-1023 {
+    font-size: 18px;
+    line-height: 1.5;
+    width: 100%;
+    text-align: center;
+  }
+
   margin: 0;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5;
   width: 60%;
+  text-align: left;
 }
 
 .booking__wrapper {
@@ -37,4 +67,14 @@
   line-height: 1.5;
   color: $color-alice-blue;
   margin-bottom: 35px;
+}
+
+.booking__order {
+  @include vp-1023 {
+    width: 100%;
+    margin-bottom: 60px;
+  }
+
+  text-align-last: left;
+  width: 50%;
 }
