--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,4 +1,16 @@
 .catalog {
+  @include vp-767 {
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 65px;
+    padding-bottom: 65px;
+  }
+
+  @include vp-1023 {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
   padding-top: 95px;
   padding-bottom: 120px;
   padding-left: 40px;
@@ -9,6 +21,15 @@
 }
 
 .catalog__title {
+  @include vp-767 {
+    margin-bottom: 40px;
+    font-style: 24px;
+  }
+
+  @include vp-1023 {
+    font-size: 26px;
+  }
+
   margin: 0;
   font-weight: 600;
   font-size: 28px;
@@ -17,14 +38,21 @@
 }
 
 .catalog__list {
+  @include vp-767 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  @include vp-1023 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   margin: 0;
   padding: 0;
   list-style: none;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
-}
-
-.catalog__item {
-  flex: 0 0 260px;
 }
