--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,4 +1,10 @@
 .footer {
+  @include vp-767 {
+    padding: 40px 15px;
+  }
+  @include vp-1023 {
+    padding: 50px 45px;
+  }
   flex-grow: 0;
   flex-shrink: 0;
   background-color: #011c40;
@@ -6,6 +12,10 @@
 }
 
 .footer__wrapper {
+  @include vp-767 {
+    flex-direction: column;
+    align-items: flex-start;
+  }
   display: flex;
   align-items: center;
 }
