--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -1,13 +1,41 @@
 .info {
+  @include vp-767 {
+    justify-content: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 65px;
+    padding-bottom: 85px;
+  }
+
+  @include vp-1023 {
+    padding-top: 100px;
+  }
+
+  @include vp-1919 {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
-  gap: 88px;
   padding-top: 120px;
   padding-bottom: 145px;
+  padding-left: 103px;
+  padding-right: 103px;
 }
 
 .info__title {
+  @include vp-767 {
+    font-size: 24px;
+  }
+
+  @include vp-1023 {
+    font-size: 26px;
+    line-height: 1.4;
+  }
+
   font-weight: 600;
   font-size: 28px;
   line-height: 1.5;
@@ -22,6 +50,26 @@
 }
 
 .info__wrapper {
-  max-width: 512px;
-  align-self: center;
+  @include vp-767 {
+    width: 100%;
+  }
+
+  @include vp-1023 {
+    width: 50%;
+  }
+
+  width: 30%;
+}
+
+.info__img-wrapper {
+  @include vp-767 {
+    flex: 0 0 290px;
+  }
+
+  @include vp-1023 {
+    align-self: flex-start;
+    flex: 0 0 324px;
+  }
+
+  flex: 0 0 560px;
 }
