--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,4 +1,17 @@
 .promo__wrapper {
+  @include vp-767 {
+    padding-top: 84px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 185px;
+  }
+
+  @include vp-1023 {
+    padding-bottom: 280px;
+    padding-left: 45px;
+    padding-right: 45px;
+  }
+
   padding-top: 178px;
   padding-bottom: 283px;
   padding-left: 198px;
@@ -8,6 +21,17 @@
 }
 
 .promo__title {
+  @include vp-767 {
+    font-size: 36px;
+    line-height: 45px;
+    margin-bottom: 25px;
+  }
+
+  @include vp-1023 {
+    font-size: 50px;
+    line-height: 61px;
+  }
+
   margin: 0;
   font-style: normal;
   font-weight: 700;
@@ -19,6 +43,15 @@
 }
 
 .promo__text {
+  @include vp-767 {
+    font-size: 16px;
+  }
+
+  @include vp-1023 {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
