--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,4 +1,9 @@
 .social {
+  @include vp-767 {
+    margin-left: 0;
+    gap: 22px;
+    padding: 0;
+  }
   list-style: none;
   padding: 0;
   margin: 0;
