--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -1,15 +1,25 @@
 .booking {
-  @include vp-1023 {
-    flex-direction: column;
+  @include vp-767 {
+    padding-bottom: 66px;
+    padding-top: 59px;
+    background-image: url("../img/background-form-mobile.webp");
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
-  background-image: url("../img/backgroundForm.jpg");
+  @include vp-1023 {
+    flex-direction: column;
+    padding-top: 89px;
+    padding-bottom: 100px;
+    background-image: url("../img/background-form-tablet.webp");
+  }
+
+  background-image: url("../img/backgroundForm.webp");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 50px;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
 }
 
@@ -17,12 +27,14 @@
   @include vp-767 {
     font-size: 24px;
     line-height: 1.3;
+    margin-bottom: 12px;
   }
 
   @include vp-1023 {
     font-size: 34px;
     line-height: 1.5;
     text-align: center;
+    margin-bottom: 3px;
   }
 
   font-weight: 700;
@@ -30,18 +42,20 @@
   line-height: 1.5;
   margin: 0;
   text-align: left;
+  margin-bottom: 8px;
 }
 
 .booking__description {
   @include vp-767 {
     font-size: 16px;
     line-height: 1.4;
+    width: auto;
   }
 
   @include vp-1023 {
     font-size: 18px;
     line-height: 1.5;
-    width: 100%;
+    width: 52%;
     text-align: center;
   }
 
@@ -54,27 +68,66 @@
 }
 
 .booking__wrapper {
+  @include vp-767 {
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 34px;
+    padding-bottom: 40px;
+  }
+
+  @include vp-1023 {
+    width: 60%;
+    align-self: center;
+    padding-top: 44px;
+    padding-left: 48px;
+  }
+
   flex: 0 0 403px;
   background-color: #011c40;
   box-shadow: 0 4px 45px rgba(1, 28, 64, 0.15);
-  padding: 50px;
+  padding-top: 42px;
+  padding-left: 50px;
+  padding-right: 47px;
+  padding-bottom: 51px;
 }
 
 .booking__text {
+  @include vp-767 {
+    line-height: 25px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 29px;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
   margin: 0;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.5;
   color: $color-alice-blue;
-  margin-bottom: 35px;
+  margin-bottom: 28px;
+  margin-left: 1px;
 }
 
 .booking__order {
-  @include vp-1023 {
-    width: 100%;
-    margin-bottom: 60px;
+  @include vp-767 {
+    margin-bottom: 34px;
   }
 
-  text-align-last: left;
+  @include vp-1023 {
+    width: 100%;
+    margin-bottom: 52px;
+    margin-top: 0;
+    margin-right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  text-align: left;
   width: 50%;
+  margin-top: 162px;
+  margin-right: 5px;
 }
