--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -2,16 +2,18 @@
   @include vp-767 {
     padding-left: 25px;
     padding-right: 25px;
-    padding-top: 65px;
+    padding-top: 57px;
     padding-bottom: 65px;
   }
 
   @include vp-1023 {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 90px;
+    padding-bottom: 98px;
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
-  padding-top: 95px;
+  padding-top: 86px;
   padding-bottom: 120px;
   padding-left: 40px;
   padding-right: 40px;
@@ -22,8 +24,8 @@
 
 .catalog__title {
   @include vp-767 {
-    margin-bottom: 40px;
-    font-style: 24px;
+    margin-bottom: 30px;
+    font-size: 24px;
   }
 
   @include vp-1023 {
@@ -34,7 +36,7 @@
   font-weight: 600;
   font-size: 28px;
   line-height: 1.5;
-  margin-bottom: 60px;
+  margin-bottom: 48px;
 }
 
 .catalog__list {
@@ -43,10 +45,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 29px;
   }
 
   @include vp-1023 {
     grid-template-columns: repeat(2, 1fr);
+    width: 100%;
   }
 
   margin: 0;
