--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,15 +1,23 @@
 .header {
+  @include vp-767 {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 11px;
+  }
+
   @include vp-1023 {
     padding-left: 45px;
-    padding-right: 45px;
+    padding-right: 35px;
+    padding-top: 21px;
   }
 
   margin: 0;
   padding-top: 35px;
   padding-left: 103px;
-  padding-right: 103px;
+  padding-right: 95px;
   flex-shrink: 0;
   flex-grow: 0;
+  position: relative;
 }
 
 .header__wrapper {
@@ -84,3 +92,29 @@
 }
 
 //todo логотип меняет цвет, убрать реализацию css
+
+.header__menu-wrap {
+  padding-top: 5px;
+}
+
+.header__background {
+  @include vp-767 {
+    background-image: url("../img/backgroundmobile.webp");
+  }
+
+  @include vp-1023 {
+    background-image: url("../img/backgroundtablet.webp");
+  }
+
+  background-image: url("../img/background.webp");
+  background-repeat: no-repeat;
+  position: absolute;
+  background-size: cover;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  height: 100%;
+  // min-height: 650px;
+}
