--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,4 +1,19 @@
 .logo {
-  margin-right: 20px;
+  @include vp-1023 {
+    margin-right: 15px;
+    padding-top: 9px;
+  }
+
+  margin-right: 31px;
   flex-shrink: 0;
+}
+
+.logo__img {
+  @include vp-767 {
+    width: 42px;
+  }
+
+  @include vp-1023 {
+    width: 38px;
+  }
 }
