--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -22,12 +22,12 @@
 
 .navigation__list {
   @include vp-1023 {
-    gap: 23px;
+    gap: 4px;
   }
 
   list-style: none;
   display: flex;
-  gap: 33px;
+  gap: 13px;
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
@@ -46,6 +46,7 @@
   font-size: 16px;
   line-height: 1;
   color: $color-default-white;
+  padding: 10px;
 }
 
 .navigation__item {
@@ -78,10 +79,34 @@
 
 .navigation--footer {
   @include vp-767 {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 23px;
+  }
+
+  @include vp-1023 {
+    margin-top: 2px;
   }
 
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.navigation--footer .navigation__link {
+  @include vp-767 {
+    padding-left: 0;
+  }
+
+  @include vp-1023 {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+
+.navigation__link:active {
+  color: $color-blue-active;
+}
+
+.navigation__link:hover {
+  color: $color-saffron-hover;
 }
