--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,18 +1,51 @@
 .social {
   @include vp-767 {
     margin-left: 0;
-    gap: 22px;
     padding: 0;
+    gap: 12px;
   }
+
+  @include vp-1023 {
+    gap: 0;
+    padding-top: 12px;
+  }
+
   list-style: none;
-  padding: 0;
   margin: 0;
   display: flex;
-  gap: 30px;
+  gap: 7px;
   margin-left: auto;
-  padding-left: 20px;
+  padding: 11px 0 0 0;
 }
 
 .social svg {
+  @include vp-767 {
+    width: 16px;
+  }
+
   fill: #f9fbfd;
+}
+
+.social__link:hover svg {
+  fill: $color-saffron-hover;
+}
+
+.social__link {
+  @include vp-767 {
+    padding: 5px;
+
+    &:first-of-type {
+      padding-left: 0;
+    }
+  }
+
+  padding: 10px;
+}
+
+.social__link:focus svg {
+  fill: $color-saffron-hover;
+}
+
+.social__link:active svg {
+  fill: $color-blue-active;
 }
