--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,8 @@ $color-neon-blue: #2c39f2;
 $color-torch-red: #ff1553;
 $color-tangaroa: #011c40;
 $color-alice-blue: #f9fbfd;
+$color-blue-active: #1e1ed0;
+$color-saffron-hover: #f1c232;
 
 // Gradient
 
