--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -2,7 +2,6 @@
   @include vp-767 {
     padding: 65px 15px;
     padding-top: 57px;
-    padding-bottom: 63px;
   }
 
   @include vp-1023 {
@@ -64,20 +63,22 @@
 }
 
 .address__link {
+  @include vp-767 {
+    gap: 10px;
+  }
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
 }
 
 .address__link-wrap {
   @include vp-1023 {
-    gap: 6px;
     align-items: flex-start;
   }
 
-  display: flex;
-  gap: 10px;
-  align-items: center;
   margin-bottom: 21px;
 }
 
@@ -94,20 +95,19 @@
   padding-top: 76px;
 }
 
-.address__link-wrap svg {
-  @include vp-1023 {
-    width: 22px;
-  }
-
-  flex-shrink: 0;
-  align-self: center;
+.address__map iframe {
+  width: 100%;
+  height: 100%;
 }
 
-//todo
 .address__link:hover {
-  color: $color-neon-blue;
+  color: $color-saffron-hover;
 }
 
-.address__link:active {
-  color: $color-neon-blue;
+.address__link:hover svg {
+  fill: $color-saffron-hover;
+}
+
+.address__link svg {
+  flex-shrink: 0;
 }
