--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
   @include vp-767 {
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 9px;
     padding-top: 11px;
   }
 
@@ -23,6 +23,7 @@
 .header__wrapper {
   @include vp-767 {
     align-items: center;
+    min-height: 46px;
   }
 
   display: flex;
@@ -30,70 +31,10 @@
   width: 100%;
 }
 
-.header__check {
-  opacity: 0;
-  position: absolute;
-}
-
-.header__button {
-  @include vp-767 {
-    display: flex;
-    align-items: center;
-    width: 24px;
-    height: 24px;
-    position: relative;
-    cursor: pointer;
-    z-index: 1;
-    background-color: transparent;
-  }
-
-  display: none;
-}
-
-.header__button > span,
-.header__button > span::before,
-.header__button > span::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: $color-default-white;
-  transition-duration: 0.25s;
-}
-
-.header__button > span::before {
-  content: "";
-  top: -8px;
-}
-
-.header__button > span::after {
-  content: "";
-  top: 8px;
-}
-
-.header__check:checked ~ .header__button > span {
-  transform: rotate(45deg);
-}
-
-.header__check:checked ~ .header__button > span::before {
-  top: 0;
-  transform: rotate(0);
-  background-color: #011c40;
-}
-
-.header__check:checked ~ .header__button > span::after {
-  top: 0;
-  transform: rotate(90deg);
-  background-color: #011c40;
-}
-
-.header__check:checked ~ .navigation {
-  display: block;
-}
-
-//todo логотип меняет цвет, убрать реализацию css
-
 .header__menu-wrap {
+  @include vp-767 {
+    padding-top: 0;
+  }
   padding-top: 5px;
 }
 
@@ -116,5 +57,52 @@
   bottom: 0;
   z-index: -1;
   height: 100%;
-  // min-height: 650px;
+}
+
+.header__button {
+  @include vp-767 {
+    display: block;
+    border: none;
+    background-color: inherit;
+  }
+
+  display: none;
+}
+
+.header__button-icon--cross {
+  display: none;
+}
+
+.header--opened .navigation--header {
+  display: block;
+}
+
+.header--opened .header__button-icon--cross {
+  display: block;
+}
+
+.header--opened .header__button {
+  position: absolute;
+  top: 23px;
+  right: 8px;
+  z-index: 2;
+}
+
+.header--opened .header__button-icon--menu {
+  display: none;
+}
+
+.header--opened .header__logo {
+  @include vp-767 {
+    position: absolute;
+    top: 11px;
+    left: 50px;
+    z-index: 2;
+  }
+}
+
+.header--opened .logo__img {
+  @include vp-767 {
+    fill: $color-tangaroa;
+  }
 }
