--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,7 +1,6 @@
 .logo {
   @include vp-1023 {
     margin-right: 15px;
-    padding-top: 9px;
   }
 
   margin-right: 31px;
@@ -16,4 +15,6 @@
   @include vp-1023 {
     width: 38px;
   }
+
+  fill: $color-default-white;
 }
