--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -85,4 +85,11 @@
   position: absolute;
   top: 0;
   bottom: 0;
+  justify-content: space-between;
+}
+
+.catalog__item:hover .card h3 {
+  position: absolute;
+  top: 0;
+  z-index: 2;
 }
