--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -14,6 +14,7 @@
     background-image: url("../img/background-form-tablet.webp");
   }
 
+  background-color: #def4fd;
   background-image: url("../img/backgroundForm.webp");
   background-repeat: no-repeat;
   background-size: cover;
