--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -14,7 +14,7 @@
     padding-bottom: 100px;
     gap: 48px;
   }
-
+  background-color: #def4fd;
   background-image: url("../img/background-adventages.webp");
   background-repeat: no-repeat;
   background-size: cover;
