--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -3,32 +3,40 @@
     width: 100%;
   }
 
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
+  position: relative;
+  min-height: 386px;
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
 }
 
 .card__content {
   display: none;
   flex-direction: column;
-  align-items: stretch;
-  justify-content: space-between;
   padding: 35px 25px;
   padding-right: 15px;
-  max-height: 100%;
-  width: 100%;
+  position: absolute;
+  background-color: $color-tangaroa;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  justify-content: space-between;
 }
 
 .card__preview {
   z-index: -1;
-  grid-column: 1/-1;
-  grid-row: 1/-1;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .card__preview img {
   @include vp-767 {
     width: 100%;
+    height: 100%;
   }
 
   @include vp-1023 {
@@ -58,7 +66,7 @@
   grid-row: 2/3;
   grid-column: 1/-1;
   margin-left: 30px;
-  margin-bottom: 24px;
+  margin-bottom: 23px;
 }
 
 .card__content dt {
