--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -9,14 +9,17 @@
   @include vp-1023 {
     padding-top: 90px;
     padding-bottom: 98px;
+  }
+
+  @include vp-1279 {
     padding-left: 60px;
     padding-right: 60px;
   }
 
   padding-top: 86px;
   padding-bottom: 120px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 118px;
+  padding-right: 118px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,7 +48,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 29px;
+    gap: 30px;
   }
 
   @include vp-1023 {
@@ -59,6 +62,8 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
+  width: 100%;
+  justify-items: center;
 }
 
 .catalog__item {
