--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -64,6 +64,7 @@
   padding-top: 11px;
   padding-bottom: 11px;
   margin-top: 10px;
+  cursor: pointer;
 
   &:hover {
     background-color: $color-saffron-hover;
