--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -35,6 +35,7 @@
   @include vp-767 {
     padding-top: 0;
   }
+
   padding-top: 5px;
 }
 
@@ -47,6 +48,7 @@
     background-image: url("../img/backgroundtablet.webp");
   }
 
+  background-color: #004f8e;
   background-image: url("../img/background.webp");
   background-repeat: no-repeat;
   position: absolute;
