--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/address";
 @import "blocks/social";
 @import "blocks/logo";
+@import "blocks/nojs";
 
 // ---------------------------------
 
