--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,14 +3,20 @@
     padding-left: 15px;
     padding-right: 9px;
     padding-top: 11px;
+    background-image: url("../img/backgroundmobile.webp");
   }
 
   @include vp-1023 {
     padding-left: 45px;
     padding-right: 35px;
     padding-top: 21px;
+    background-image: url("../img/backgroundtablet.webp");
   }
 
+  background-color: #004f8e;
+  background-image: url("../img/background.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 0;
   padding-top: 35px;
   padding-left: 103px;
@@ -22,8 +28,8 @@
 
 .header__wrapper {
   @include vp-767 {
-    align-items: center;
-    min-height: 46px;
+    align-items: flex-start;
+    min-height: 113px;
   }
 
   display: flex;
@@ -31,44 +37,16 @@
   width: 100%;
 }
 
-.header__menu-wrap {
-  @include vp-767 {
-    padding-top: 0;
-  }
-
-  padding-top: 5px;
-}
-
-.header__background {
-  @include vp-767 {
-    background-image: url("../img/backgroundmobile.webp");
-  }
-
-  @include vp-1023 {
-    background-image: url("../img/backgroundtablet.webp");
-  }
-
-  background-color: #004f8e;
-  background-image: url("../img/background.webp");
-  background-repeat: no-repeat;
-  position: absolute;
-  background-size: cover;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  height: 100%;
-}
-
 .header__button {
   @include vp-767 {
     display: block;
     border: none;
     background-color: inherit;
+    padding-top: 10px;
   }
 
   display: none;
+  cursor: pointer;
 }
 
 .header__button-icon--cross {
