--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -93,7 +93,7 @@
   justify-content: space-between;
 }
 
-.catalog__item:hover .card h3 {
+.catalog__item:hover h3 {
   position: absolute;
   top: 0;
   z-index: 2;
