--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -18,6 +18,7 @@
     padding-left: 15px;
     padding-right: 30px;
     padding-bottom: 30px;
+    padding-top: 73px;
   }
 }
 
@@ -55,26 +56,13 @@
   transition-duration: 0.25s;
 }
 
-.navigation--header .navigation__list {
-  @include vp-767 {
-    flex-direction: column;
-    padding-top: 74px;
-    gap: 9px;
-  }
-}
-
-.navigation--header .navigation__link {
-  @include vp-767 {
-    font-size: 18px;
-    line-height: 22px;
-    color: #011c40;
-    padding: 10px;
-
-    &:hover {
-      color: $color-saffron-hover;
-    }
-  }
-}
+// .navigation--header .navigation__list {
+//   @include vp-767 {
+//     flex-direction: column;
+//     padding-top: 74px;
+//     gap: 9px;
+//   }
+// }
 
 .navigation--footer .navigation__list {
   @include vp-767 {
