--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -60,10 +60,18 @@
 .promo__background {
   @include vp-767 {
     background-image: url("../img/backgroundmobile.webp");
+
+    @include retina {
+      background-image: url("../img/backgroundmobile@2.webp");
+    }
   }
 
   @include vp-1023 {
     background-image: url("../img/backgroundtablet.webp");
+
+    @include retina {
+      background-image: url("../img/backgroundtablet@2.webp");
+    }
   }
 
   background-image: url("../img/background.webp");
@@ -75,4 +83,8 @@
   right: 0;
   z-index: -1;
   height: 100%;
+
+  @include retina {
+    background-image: url("../img/background@2.webp");
+  }
 }
