--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -39,7 +39,7 @@ body {
   color: $color-tangaroa;
   display: flex;
   flex-direction: column;
-  // position: relative;
+  position: relative;
 }
 
 a {
