--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -1,7 +1,6 @@
 .address {
   @include vp-767 {
-    padding: 65px 15px;
-    padding-top: 57px;
+    padding: 57px 15px;
   }
 
   @include vp-1023 {
@@ -9,6 +8,7 @@
   }
 
   padding: 120px 103px;
+  @include max-width;
 }
 
 .address__wrapper {
@@ -22,19 +22,23 @@
     gap: 30px;
   }
 
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 40px;
+  // display: grid;
+  // grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
 }
 
 .address__map {
   @include vp-767 {
     order: 2;
-    height: 316px;
+    height: auto;
+    flex: 0 0 290px;
   }
 
   @include vp-1023 {
     height: 335px;
+    flex: 0 0 324px;
   }
 
   order: 0;
@@ -43,6 +47,8 @@
   height: 306px;
   background-repeat: no-repeat;
   background-size: cover;
+  flex: 0 0 560px;
+  cursor: pointer;
 }
 
 .address__description {
@@ -92,11 +98,14 @@
     padding: 0;
   }
 
-  padding-left: 61px;
-  padding-top: 76px;
+  padding-left: 80px;
+  padding-top: 74px;
 }
 
 .address__map iframe {
+  @include vp-767 {
+    min-height: 316px;
+  }
   width: 100%;
   height: 100%;
 }
@@ -111,4 +120,8 @@
 
 .address__link svg {
   flex-shrink: 0;
+}
+
+.address__link--tel {
+  width: max-content;
 }
