--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -14,6 +14,7 @@
     padding-bottom: 100px;
     gap: 48px;
   }
+
   background-color: #def4fd;
   background-image: url("../img/background-adventages.webp");
   background-repeat: no-repeat;
@@ -26,6 +27,10 @@
   gap: 47px;
   padding-left: 40px;
   padding-right: 40px;
+}
+
+.advantages__container {
+  @include max-width;
 }
 
 .advantages__item svg {
@@ -58,6 +63,7 @@
 .advantages__title {
   @include vp-767 {
     font-size: 24px;
+    margin-bottom: 31px;
   }
 
   @include vp-1023 {
@@ -72,7 +78,9 @@
   font-size: 28px;
   line-height: 1.5;
   color: #011c40;
-  margin: 0 auto;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 48px;
 }
 
 .advantages__item {
