--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -27,13 +27,18 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding: 50px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+
 
   @include retina {
     background-image: url("../img/backgroundForm@2.webp");
   }
+}
+
+.booking__container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  @include max-width;
 }
 
 .booking__title {
@@ -87,6 +92,7 @@
     padding-right: 30px;
     padding-top: 34px;
     padding-bottom: 40px;
+    flex: 0 0 auto;
   }
 
   @include vp-1023 {
@@ -99,10 +105,11 @@
   flex: 0 0 403px;
   background-color: #011c40;
   box-shadow: 0 4px 45px rgba(1, 28, 64, 0.15);
-  padding-top: 42px;
+  padding-top: 44px;
   padding-left: 50px;
   padding-right: 47px;
   padding-bottom: 51px;
+  align-self: flex-start;
 }
 
 .booking__text {
@@ -110,7 +117,7 @@
     line-height: 25px;
     margin: 0 auto;
     text-align: center;
-    margin-bottom: 29px;
+    margin-bottom: 31px;
     margin-right: 15px;
     margin-left: 15px;
   }
