--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -46,6 +46,7 @@
 
   width: 100%;
   height: 386px;
+  object-fit: cover;
 }
 
 .card h3 {
@@ -88,6 +89,20 @@
 
 .card__content dl {
   margin: 0;
+  overflow: scroll;
+}
+
+/* Скрываем scrollbar для Chrome, Safari и Opera */
+.card__content dl::-webkit-scrollbar {
+  display: none;
+}
+
+/* Скрываем scrollbar для IE, Edge и Firefox */
+.card__content dl {
+  -ms-overflow-style: none;
+  /* IE и Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .card__button {
@@ -104,6 +119,10 @@
   text-align: center;
 
   &:hover {
+    background-color: $color-saffron-hover;
+  }
+
+  &:focus {
     background-color: $color-saffron-hover;
   }
 
