--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -5,7 +5,7 @@
 
   @include vp-1023 {
     padding: 50px 45px;
-    padding-top: 36px;
+    padding-top: 39px;
     padding-right: 35px;
   }
 
@@ -25,6 +25,7 @@
 
   display: flex;
   align-items: center;
+  @include max-width;
 }
 
 .footer__logo {
