--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -25,6 +25,7 @@
 .navigation__list {
   @include vp-1023 {
     gap: 4px;
+    padding-top: 0;
   }
 
   list-style: none;
@@ -33,6 +34,7 @@
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
+  padding-top: 2px;
 }
 
 .navigation__link {
@@ -55,14 +57,6 @@
 .navigation__item {
   transition-duration: 0.25s;
 }
-
-// .navigation--header .navigation__list {
-//   @include vp-767 {
-//     flex-direction: column;
-//     padding-top: 74px;
-//     gap: 9px;
-//   }
-// }
 
 .navigation--footer .navigation__list {
   @include vp-767 {
