--- a/source/sass/blocks/checkbox.scss
+++ b/source/sass/blocks/checkbox.scss
@@ -12,16 +12,6 @@
   cursor: pointer;
 }
 
-.checkbox span {
-  font-family: "Montserrat", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 1.3;
-  color: $color-alice-blue;
-  display: flex;
-  align-items: center;
-}
-
 .checkbox label {
   @include vp-767 {
     gap: 7px;
@@ -33,6 +23,11 @@
   letter-spacing: 0.04rem;
   gap: 5px;
   cursor: pointer;
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.3;
+  color: $color-alice-blue;
 }
 
 .checkbox:hover span {
@@ -41,4 +36,10 @@
 
 .checkbox:hover input {
   outline: 2px solid $color-saffron-hover;
+}
+
+.checkbox .form__error {
+  position: absolute;
+  top: 20px;
+  left: 0;
 }
