--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -46,6 +46,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+
   @include max-width;
 }
 
@@ -127,7 +128,7 @@
   @include vp-767 {
     display: block;
     position: fixed;
-    background-color: #002B66;
+    background-color: #002a66;
     opacity: 0.5;
     width: 100vw;
     height: 100vh;
