--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -62,6 +62,7 @@
   padding-bottom: 11px;
   margin-top: 10px;
   cursor: pointer;
+  background-color: $color-alice-blue;
 
   &:hover {
     background-color: $color-saffron-hover;
