--- a/source/sass/blocks/checkbox.scss
+++ b/source/sass/blocks/checkbox.scss
@@ -10,7 +10,7 @@
   background-color: $color-alice-blue;
   flex-shrink: 0;
   cursor: pointer;
-  border-radius: none;
+  border-radius: 0;
   border: none;
 }
 
