--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,4 +1,8 @@
 .card {
+  // @include vp-767 {
+  //   max-height: none;
+  // }
+
   @include vp-1023 {
     width: 100%;
   }
@@ -30,15 +34,15 @@
   z-index: -1;
   position: absolute;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
+  width: 100%;
 }
 
 .card__preview img {
   @include vp-767 {
     width: 100%;
-    height: 100%;
+    height: auto;
+    max-height: 386px;
   }
 
   @include vp-1023 {
