--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,14 +1,14 @@
 .card {
-  // @include vp-767 {
-  //   max-height: none;
-  // }
+  @include vp-767 {
+    aspect-ratio: 270/386;
+  }
 
   @include vp-1023 {
     width: 100%;
   }
 
   position: relative;
-  max-height: 386px;
+  // max-height: 386px;
   display: flex;
   align-items: flex-end;
   width: 100%;
@@ -27,7 +27,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .card__preview {
@@ -41,17 +41,17 @@
 .card__preview img {
   @include vp-767 {
     width: 100%;
-    height: auto;
-    max-height: 386px;
+    height: 100%;
+
   }
 
   @include vp-1023 {
-    height: 387px;
+    // height: 387px;
     width: 100%;
   }
 
   width: 100%;
-  height: 386px;
+  // max-height: 386px;
   object-fit: cover;
 }
 
